--- a/lab6.html
+++ b/lab6.html
@@ -10,7 +10,7 @@
 
 <body>
   <h1>Lab 6</h1>
-  <h3>Student Name: </h3>
+  <h3>Student Name: Christian Morini </h3>
 
   <div class="problem">
      <b>Problem 1:</b> Update the content of the element id="answer1" using the innerHTML property to display "Lab 6 by " and your name.
@@ -19,12 +19,12 @@
     <div id="answer1"></div>
     <script>
       // Solution for Problem 1 here.
-
+      document.getElementById("answer1").innerHTML = "Lab 6 by Christian Morini";
     </script>
   </div>
   <!-- ----------------------------------------------------------------------------- -->
   <div class="problem">
-    <b>Problem 2:</b> Use document.getElementsByClassName(name) with class="content". Modify all elements with class="content" setting the content to "New Content from Problem 2".
+    <b><br>Problem 2:</b> Use document.getElementsByClassName(name) with class="content". Modify all elements with class="content" setting the content to "New Content from Problem 2".
   </div>
   <div class="answer">
     <div class="content">Original Content 1</div><br>
@@ -32,7 +32,12 @@
     <div class="content">Original Content 3</div><br>
     <script>
       // Solution for Problem 2 here.
-      
+      const elements = document.getElementsByClassName("content");
+
+      // Loop through the elements and update their innerHTML
+      for (let i = 0; i < elements.length; i++) {
+          elements[i].innerHTML = "New Content from Problem 2";
+      }
     </script>
   </div>
   <!-- ----------------------------------------------------------------------------- -->
@@ -40,17 +45,25 @@
      <b>Problem 3:</b> Use document.querySelectorAll() to retrieve all tags with class="problem3". Display all of the content from these elements (div.problem3) using a document.writeln() statement.
   </div>
   <div class="answer">
+
     <div class="problem3">This problem </div>
     <div class="problem3">covers using the </div>
     <div class="problem3">querySelectorAll() method.</div>
+
     <br>
     <script>
     // Solution for Problem 3 here.
+    const problem3Elements = document.querySelectorAll(".problem3");
+
+    // Loop and write each element's content
+    problem3Elements.forEach(function(element) {
+        document.writeln(element.innerHTML);
+    });
       </script>
   </div>
   <!-- ----------------------------------------------------------------------------- -->
   <div class="problem">
-     <b>Problem 4:</b> Use the getElementById() method to retrieve the element with id="logo". Modify it's src attribute to read "img/logo2.jpg", so the logo image below is changed.
+     <b><br>Problem 4:</b> Use the getElementById() method to retrieve the element with id="logo". Modify it's src attribute to read "img/logo2.jpg", so the logo image below is changed.
     <br><br>
     <img id="logo" src="img/logo1.jpg" style="width:120px; height:auto;">
     <br>
@@ -58,20 +71,24 @@
   <div class="answer">
     <script>
     // Solution for Problem 4 here.
+    const logo = document.getElementById("logo");
+    logo.src = "img/logo2.jpg";
       </script>
   </div>
   <!-- ----------------------------------------------------------------------------- -->
   <div class="problem">
-     <b>Problem 5:</b> Use appendChild() to add an element to the end of the document with "Written by " and your name.
+     <b><br>Problem 5:</b> Use appendChild() to add an element to the end of the document with "Written by " and your name.
   </div>
   <div class="answer">
     <script>
       // Solution for Problem 5 here.
-
+      const newElement = document.createElement("div");
+      newElement.innerHTML = "Written by Christian Morini";
+      document.body.appendChild(newElement);
     </script>
   </div>
 
-  
+
 </body>
 
 </html>
