--- a/lab7-4.html
+++ b/lab7-4.html
@@ -1,14 +1,82 @@
-<html>
-  <head>
-    <title>Lab 7 - Problem 4</title>
-    <style>*{font-family:Roboto,Helvetica,Arial,sans-serif;}body{padding:10px;}</style>
-  </head>
-  <body>
-    <h1>Lab 7 - Problem 4</h1>
-    <form method="POST" action="./index.php">
-      Create an HTML form that accepts first name, last name, and select list with favorite programming languages. In the select list, the first option should be "Select a Favorite Language". Make sure that one of the languages, not this option, is selected before submitting the form. Also, make sure that first and last name are not empty.
-      <br><br>
-      <input type="submit" value="Submit">
-    </form>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Problem 4 - Form Validation</title>
+  <script>
+    function validateForm(event) {
+      // Prevent the form from submitting
+      event.preventDefault();
+
+      // Get values from the form inputs
+      const fname = document.getElementById('fname').value.trim();
+      const lname = document.getElementById('lname').value.trim();
+      const favlang = document.getElementById('favlang').value;
+
+      // Error message container
+      const errorMessage = document.getElementById('error-message');
+      errorMessage.innerHTML = ""; // Clear previous messages
+
+      // Validate first name
+      if (fname === '') {
+        errorMessage.innerHTML += "First name is required.<br>";
+      }
+
+      // Validate last name
+      if (lname === '') {
+        errorMessage.innerHTML += "Last name is required.<br>";
+      }
+
+      // Validate favorite programming language
+      if (favlang === "Select a Favorite Language") {
+        errorMessage.innerHTML += "Please select a favorite programming language.<br>";
+      }
+
+      // Check if there are no error messages
+      if (errorMessage.innerHTML === "") {
+        errorMessage.innerHTML = ""; // Clear any existing error message
+        setTimeout(() => {
+          alert("Form submitted successfully!\nFirst Name: " + fname + "\nLast Name: " + lname + "\nFavorite Language: " + favlang);
+        }, 0);
+      }
+    }
+  </script>
+</head>
+
+<body>
+  <h1>Lab 7-4</h1>
+  <h3>Student Name: Christian Morini</h3>
+  <h3>Problem 4</h3>
+  <p>Create an HTML form that accepts first name (name and id=fname), last name (name and id=lname), and a select list
+    with favorite programming languages (name and id=favlang). Make sure that first and last name are not empty, and a
+    valid programming language is selected.</p>
+  <form onsubmit="validateForm(event)">
+    <label for="fname"><b>First Name:</b></label><br>
+    <input type="text" id="fname" name="fname"><br><br>
+
+    <label for="lname"><b>Last Name:</b></label><br>
+    <input type="text" id="lname" name="lname"><br><br>
+
+    <label for="favlang"><b>Favorite Programming Language:</b></label><br>
+    <select id="favlang" name="favlang">
+      <option value="Select a Favorite Language">Select a Favorite Language</option>
+      <option value="JavaScript">JavaScript</option>
+      <option value="Python">Python</option>
+      <option value="Java">Java</option>
+      <option value="C#">C#</option>
+      <option value="Ruby">Ruby</option>
+      <option value="PHP">PHP</option>
+    </select><br><br>
+
+    <input type="submit" value="Submit">
+  </form>
+
+  <!-- Error message display -->
+  <br />
+  <div id="error-message" style="color: red;"></div>
+
+</body>
+
 </html>
