--- a/lab7.html
+++ b/lab7.html
@@ -1,14 +1,142 @@
+﻿<!DOCTYPE html>
 <html>
-  <head>
-    <title>Lab 7</title>
-    <style>*{font-family:Roboto,Helvetica,Arial,sans-serif;}body{padding:10px;}</style>
-  </head>
-  <body>
-    <h1>Lab 7</h1>
-    <h3>Student Name: </h3>
-    <a href="lab7-1.html">Problem 1</a><br><br>
-    <a href="lab7-2.html">Problem 2</a><br><br>
-    <a href="lab7-3.html">Problem 3</a><br><br>
-    <a href="lab7-4.html">Problem 4</a><br><br>
-  </body>
-</html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Lab 5</title>
+  <style>
+    * {
+      font-family: Roboto, Helvetica, Arial, sans-serif;
+    }
+
+    body {
+      padding: 10px;
+    }
+
+    .ml2 {
+      font-weight: 900;
+      font-size: 2em;
+    }
+
+    .ml2 .letter {
+      display: inline-block;
+      line-height: 1em;
+    }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
+</head>
+
+
+
+<h1>Lab 7</h1>
+<h3>Student Name: Christian Morini </h3>
+
+<script>
+  function validateForm(event) {
+    const nameInput = document.getElementById('name').value;
+    const errorMessage = document.getElementById('error-message');
+
+    // Clear previous error message
+    errorMessage.textContent = "";
+
+    // Check if the name input is empty
+    if (nameInput.trim() === '') {
+      event.preventDefault(); // Prevent form submission
+      alert("Name input is required.");
+      // Instead of using an alert, we can display the message directly on the screen.
+      // errorMessage.textContent = "Name input is required."; // Error message
+      // errorMessage.style.color = "red"; // Style the error message with red color
+    } else {
+      alert("Form submitted successfully! Name: " + nameInput);
+    }
+  }
+</script>
+</head>
+
+<body>
+  <h3>Problem 1</h3>
+  <p>Check the name input element to make sure that the field is not empty when the form is submitted. If it is empty,
+    use JavaScript to display an error message on the page that says, "Name input is required."</p>
+
+  <form onsubmit="validateForm(event)">
+    <b>Name</b>
+    <input type="text" id="name" name="name">
+    <input type="submit" value="Submit Name">
+  </form>
+  <div id="error-message"></div>
+  <br /><br />
+
+
+
+  <h3>Problem 2</h3>
+  Use the input element with name="email". Important! Do not use HTML validation!
+  You have to use JavaScript. Develop a JavaScript function that takes an input string
+  (supposedly an email address) as an argument and validates if it conforms to the standard email format. The
+  function should check for the presence of "@" symbol, domain name, and top-level domain (TLD) according to
+  common email address patterns. Call the function to validate a single html form element on the page that allows an
+  email input.
+  Example: If the user inputs "example@email" without a valid TLD (e.g., ".com", ".org"), the function should
+  return false indicating an invalid email format. <br /><br />
+  <script>
+    function validateEmail(email) {
+      // Basic validation pattern for email
+      const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      return emailPattern.test(email);
+    }
+
+    function validateForm(event) {
+      const emailInput = document.getElementById('email').value;
+
+      // Validate the email
+      if (!validateEmail(emailInput)) {
+        event.preventDefault(); // Prevent form submission
+        alert("Invalid email format. Please enter a valid email address."); // Show error alert
+      } else {
+        alert("Email submitted successfully: " + emailInput); // Show success alert
+      }
+    }
+  </script>
+  <form onsubmit="validateForm(event)">
+    <b>Email</b><br />
+    <input type="email" id="email" name="email"> <!-- Email input without HTML validation -->
+    <br /><br />
+    <input type="submit" value="Submit Email">
+  </form>
+
+  <!-- Error message display -->
+  <div id="error-message" style="display: none; color: red;"></div>
+
+  <!-- Success message display -->
+  <div id="success-message" style="display: none; color: green;"></div>
+
+  <br /><br />
+
+
+
+  <h3>Problem 3</h3>
+  Create a HTML form with a password field and implement JavaScript code to ensure that the password meets
+  certain criteria including: 1) At least 8 characters in length, 2) contains 1 of the following characters
+  ! [ ., 3) has at least 1 uppercase 4) has at least 1 lowercase letter, and 5) contains at least 1 numeric digit.
+  If the password does not meet the criteria, display an error message on the page that says, "Password does not meet
+  requirement: " and display the requirement that it doesn&#39;t meet.<br /><br />
+
+
+
+  Password<br />
+
+  <br /><br />
+
+
+
+  <h3>Problem 4</h3>
+
+
+
+  Create an HTML form that accepts first name (name and id=fname), last name (name and id=lname),
+  and select list with favorite programming languages (name and id=favlang).
+  In the select list, the first option should be "Select a Favorite Language". Make sure
+  that one of the languages, not this option, is selected before submitting the form. Also, make sure
+  that first and last name are not empty.
+</body>
+<br /><br />
