--- a/lab7.html
+++ b/lab7.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lab 7 Combined</title>
+  <title>Lab 7</title>
 
   <script>
     // Function for Problem 1: Validate Name Input
