--- a/lab10.html
+++ b/lab10.html
@@ -1,22 +1,59 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Lab 10</title>
-    <style>*{font-family:Roboto,Helvetica,Arial,sans-serif;}body{padding:10px;} a { font-size:1.2em; }</style>
-  </head>
-  <body>
-    <h1>Lab 10</h1>
-    <h3>Student Name: </h3>
-    <p>
-      AJAX Response:<br>
-      <div id="ajax"></div>
-    </p>
-    <p>
-      Fetch Response:<br>
-      <div id="fetch"></div>
-    </p>
 
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<title>Lab 10</title>
+	<style>
+		* {
+			font-family: Roboto, Helvetica, Arial, sans-serif;
+		}
+
+		body {
+			padding: 10px;
+		}
+
+		a {
+			font-size: 1.2em;
+		}
+	</style>
+</head>
+
+<body>
+	<h1>Lab 10</h1>
+	<h3>Student Name: Christian Morini</h3>
+	<p>
+		AJAX Response:<br>
+	<div id="ajax"></div>
+	</p>
+	<p>
+		Fetch Response:<br>
+	<div id="fetch"></div>
+	</p>
+
+
+	<script>
+		// AJAX Request to load content from ajax.txt
+		const request = new XMLHttpRequest();
+		request.open("GET", "ajax.txt", true);
+		request.onreadystatechange = function () {
+			if (request.readyState === 4 && request.status === 200) {
+				document.getElementById("ajax").innerText = request.responseText;
+			}
+		};
+		request.send();
+
+		// Fetch API to load content from fetch.txt
+		fetch("fetch.txt")
+			.then(response => response.text())
+			.then(data => {
+				document.getElementById("fetch").innerText = data;
+			})
+			.catch(error => console.error("Fetch error:", error));
+
+	</script>
+
+</body>
+
 </html>
